--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="https://github.com/PrajwalAravatti/KGT.github.io">Github repository</a>
             <a href="projrct_intro.html">Project Overview</a>
-            <a href="businesscases.html">Business Use Cases</a>
+            <a href="businesscase.html">Business Use Cases</a>
             <a href="reflections_team.html">Course Reflections</a>
         </nav>
     </header>
