--- a/businesscase.html
+++ b/businesscase.html
@@ -13,7 +13,7 @@
     <main>
         <div>
             <a href="sumanth/sumanth_businesscase.html">
-                <h2>Sumanth Shet</h2>
+                <h2>Gurubasavaraj B</h2>
                 <p>
                     1. Eco-friendly Route Optimization Platform<br>
                     2. Smart Traffic Management Systems<br>
