--- a/projrct_intro.html
+++ b/projrct_intro.html
@@ -277,11 +277,11 @@
         <h3>Click on team member to view thier portfolio</h3>
         <div class="team-grid">
             <div class="team-member">
-                <a href="prajwal/portfolio_prajwal.html" class="team-member-link">
+                <a href="gurubasavarja/portfolio.html" class="team-member-link">
                     <div class="team-member-content">
-                        <h4>Prajwal Aravatti</h4>
-                        <p>USN: 01FE23BCS299</p>
-                        <p>Roll no: 549</p>
+                        <h4>Gurubasavaraja</h4>
+                        <p>USN: 01FE23BCI120</p>
+                        <p>Roll no: 249</p>
                     </div>
                 </a>
             </div>
@@ -309,8 +309,18 @@
                         <h4>Subramanya A T</h4>
                         <p>USN: 01FE23BCS279</p>
                         <p>Roll no: 540</p>
+                </a>
+            </div>
+            <div class="team-member">
+                <a href="mallikarjun/mallikarjun_portfolio.html" class="team-member-link">
+                    <div class="team-member-content">
+                        <h4>Mallikarjun Patil</h4>
+                        <p>USN: 01FE23BCS283</p>
+                        <p>Roll no: 545</p>
                     </div>
                 </a>
+            </div>
+                
             </div>
         </div>
     </section>
