--- a/chethan/route_businessm.html
+++ b/chethan/route_businessm.html
@@ -255,8 +255,8 @@
             Here is the some data and graph generated from for above business from small part of our city project
             link below:
         </p>
-        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Eco_Friendly_Route_Optimization.png">Data generated</a>
-       <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Adjacency_List_Graph.png">Data generated</a>
+        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Eco_Friendly_Route_Optimization.pdf">Data generated</a>
+       <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Adjacency_List_Graph.pdf">Data generated</a>
         <h4>Dijkstras algorithm Implementation in C++</h4>
  <p>Effeciency:O(1)</p>
         <p>
