--- a/businesscase.html
+++ b/businesscase.html
@@ -12,8 +12,8 @@
     </header>
     <main>
         <div>
-            <a href="sumanth/sumanth_businesscase.html">
-                <h2>Gurubasavaraj B</h2>
+            <a href="chethan/chethan_businesscase.html">
+                <h2>Chethan SH</h2>
                 <p>
                     1. Eco-friendly Route Optimization Platform<br>
                     2. Smart Traffic Management Systems<br>
@@ -22,8 +22,8 @@
             </a>
         </div>
         <div>
-            <a href="prajwal/prajwal_businesscase.html">
-                <h2>Prajwal Aravatti</h2>
+            <a href="sudeep/sudeep_businesscase.html">
+                <h2>Sudeep S</h2>
                 <p>
                     1. Efficient Management of Tourism<br>
                     2. Urban Farming for Supplying Fresh Vegetables and Fruits<br>
@@ -32,8 +32,8 @@
             </a>
         </div>
         <div>
-            <a href="mallikarjun/business_model.html">
-                <h2>Mallikarjun Patil</h2>
+            <a href="guru/business_model.html">
+                <h2>B.Gurubasavaraja</h2>
                 <p>
                     1. Smart Waste Management<br>
                     2. Smart Parking Solutions<br>
@@ -42,8 +42,8 @@
             </a>
         </div>
         <div>
-            <a href="subbramnnya/subb_businesscases.html">
-                <h2>Subramanya A T</h2>
+            <a href="nandeesh/businesscases.html">
+                <h2>Nandeesh IB</h2>
                 <p>
                     1. Population Control<br>
                     2. Energy in Services<br>
