--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
     <header class="secondary-header">
         <nav>
-            <a href="https://github.com/PrajwalAravatti/KGT.github.io">Github repository</a>
-            <a href="projrct_intro.html">Project Overview</a>
-            <a href="businesscase.html">Business Use Cases</a>
+            <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io">Github repository</a>
+            <a href="project_intro.html">Project Overview</a>
+            <a href="businesscases.html">Business Use Cases</a>
             <a href="reflections_team.html">Course Reflections</a>
         </nav>
     </header>
