--- a/reflections_team.html
+++ b/reflections_team.html
@@ -24,16 +24,16 @@
         <h2>Click on a Team Member to View Their Reflections</h2>
         <div class="team-container">
             <div class="team-member">
-                <a href="sumanth/reflections_sumanth.html" target="_blank">Sumanth Shet</a>
+                <a href="chethan/reflections_chethan.html" target="_blank">Chethan SH</a>
             </div>
             <div class="team-member">
-                <a href="prajwal/refections_prajwal.html" target="_blank">Prajwal Aravatti</a>
+                <a href="sudeep/refections_sudeep.html" target="_blank">Sudeep S</a>
             </div>
             <div class="team-member">
-                <a href="mallikarjun/mallikarjun_reflect.html" target="_blank">Mallikarjun Patil</a>
+                <a href="guru/guru_reflect.html" target="_blank">B.Gurubasavaraja</a>
             </div>
             <div class="team-member">
-                <a href="subbramnnya/reflections.html" target="_blank">Subbramannya A T</a>
+                <a href="nandeesh/reflections.html" target="_blank">Nandeesh IB</a>
             </div>
         </div>
     </main>
