--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io">Github repository</a>
             <a href="project_intro.html">Project Overview</a>
-            <a href="businesscases.html">Business Use Cases</a>
+            <a href="businesscase.html">Business Use Cases</a>
             <a href="reflections_team.html">Course Reflections</a>
         </nav>
     </header>
