--- a/sudeep/tourism_businessm.html
+++ b/sudeep/tourism_businessm.html
@@ -319,7 +319,7 @@
     <!-- Navigation Bar -->
     <header class="secondary-header">
         <nav>
-            <a href="prajwal_businesscase.html">All Business Cases</a>
+            <a href="sudeep_businesscase.html">All Business Cases</a>
             <a href="water_manage.html">Smart water Management</a>
             <a href="Urban_farming_supplying_food.html">Urban Farming</a>
         </nav>
@@ -403,7 +403,7 @@
         <strong>The below graph represents tourist places in the city:</strong>
         <p>number in nodes represnt the tourist places which are assigned in above table.</p>
         <div class="graph1">
-            <img src="files/toursim_graph_00.png" alt="Tourism Graph">
+            <img src="files/Toursim_graph.png" alt="Tourism Graph">
         </div>
         <p class="graph-caption">
             Figure T1: Graph representing tourist spots in the city.
