--- a/project_intro.html
+++ b/project_intro.html
@@ -258,7 +258,7 @@
 <header class="secondary-header">
     <nav>
             <a href="index.html">Home</a>
-            <a href="businesscases.html">Business Cases</a>
+            <a href="businesscase.html">Business Cases</a>
             <a href="reflections_team.html">Course Reflections</a>
     </nav>
 </header>
