--- a/project_intro.html
+++ b/project_intro.html
@@ -305,6 +305,15 @@
                     </div>
                 </a>
             </div>
+             <div class="team-member">
+                <a href="rahul/rahul_port.html" class="team-member-link">
+                    <div class="team-member-content">
+                        <h4>Rahul RK</h4>
+                        <p>USN: 01FE23BCI090</p>
+                        <p>Roll no: 236</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <main>
