--- a/businesscase.html
+++ b/businesscase.html
@@ -142,6 +142,14 @@
                 </p>
             </a>
         </div>
+        <div>
+            <a href="https://rahulrkudalagi.github.io/All-Business-Cases/">
+                <h2>Rahul R K</h2>
+                <p>
+                    1. Agriculture <br>
+                </p>
+            </a>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Team Project | All Rights Reserved</p>
