--- a/reflections_team.html
+++ b/reflections_team.html
@@ -158,6 +158,9 @@
             <div class="team-member">
                 <a href="nandeesh/reflections.html" target="_blank">Nandeesh IB</a>
             </div>
+            <div class="team-member">
+                <a href="chethan/reflections_chethan.html" target="_blank">Rahul R K</a>
+            </div>
         </div>
     </main>
     <footer>
