--- a/rahul/rahul_port.html
+++ b/rahul/rahul_port.html
@@ -135,8 +135,8 @@ blockquote {
     <p>Brief introduction and project details here.</p>
     <h3>🛠️ Projects</h3>
     <ul>
-        <li><strong>Project 1:</strong> Short description of Project 1.</li>
-        <li><strong>Project 2:</strong> Short description of Project 2.</li>
+        <li><strong>Project 1:</strong> Automated toy(dragon).</li>
+        <li><strong>Project 2:</strong> smart gloves </li>
     </ul>
     <h3>🚀 Skills</h3>
     <ul>
