--- a/nandeesh/portfolio.html
+++ b/nandeesh/portfolio.html
@@ -134,8 +134,8 @@ blockquote {
     <p>Brief introduction and project details here.</p>
     <h3>🛠️ Projects</h3>
     <ul>
-        <li><strong>Project 1:</strong> Short description of Project 1.</li>
-        <li><strong>Project 2:</strong> Short description of Project 2.</li>
+        <li><strong>Project 1:</strong> electric cutting bot</li>
+        <li><strong>Project 2:</strong> election awareness .</li>
     </ul>
     <h3>🚀 Skills</h3>
     <ul>
