--- a/chethan/route_businessm.html
+++ b/chethan/route_businessm.html
@@ -255,8 +255,8 @@
             Here is the some data and graph generated from for above business from small part of our city project
             link below:
         </p>
-        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Eco_Friendly_Route_Optimization.pdf">Data generated</a>
-       <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Adjacency_List_Graph.pdf">Data generated</a>
+        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Eco_Friendly_Route_Optimization.png">Data generated</a>
+       <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/Adjacency_List_Graph.png">Data generated</a>
         <h4>Dijkstras algorithm Implementation in C++</h4>
  <p>Effeciency:O(1)</p>
         <p>
@@ -264,7 +264,7 @@
              <p>Effeciency:0(|v^2|)</p>
             link below:
         </p>
-        <a href="https://github.com//Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/dijkstra">Dijkstra'sCode</a>
+        <a href="https://github.com//Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/dijkstra.cpp">Dijkstra'sCode</a>
  <h4>Dijkstras algorithm Implementation with priority queue for dist array in C++</h4>
  <p>Effeciency:0(|E| log| V|)</p>
         <p>
