--- a/guru/parking_solution.html
+++ b/guru/parking_solution.html
@@ -82,7 +82,7 @@
         <p><strong>O(E log V)</strong>, where E is the number of edges (roads) and V is the number of vertices (parking spots).</p>
         <h3>Space Complexity:</h3>
         <p><strong>O(V + E)</strong>, where V is the number of parking spots and E is the number of road connections.</p>
-        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/guru/code/Prim%E2%80%99s.cpp">Prim's Code</a>
+        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/guru/code/Prim's.cpp">Prim's Code</a>
     </section>
 
     <section>
@@ -99,7 +99,7 @@
         <p><strong>O(m)</strong> for search, where m is the length of the vehicle type string.</p>
         <h3>Space Complexity:</h3>
         <p><strong>O(n * m)</strong>, where n is the number of parking spots and m is the average length of the vehicle type string.</p>
-        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/guru/code/Trie%20.cpp">Trie Code</a>
+        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/guru/code/Trie.cpp">Trie Code</a>
     </section>
 
     <section>
