--- a/chethan/route_businessm.html
+++ b/chethan/route_businessm.html
@@ -264,7 +264,7 @@
              <p>Effeciency:0(|v^2|)</p>
             link below:
         </p>
-        <a href="https://github.com//Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/dijkstra.cpp">Dijkstra'sCode</a>
+        <a href="https://https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/codes/dijkstra.cpp">Dijkstra'sCode</a>
  <h4>Dijkstras algorithm Implementation with priority queue for dist array in C++</h4>
  <p>Effeciency:0(|E| log| V|)</p>
         <p>
