--- a/chethan/route_businessm.html
+++ b/chethan/route_businessm.html
@@ -271,7 +271,7 @@
             Here is the implementation of dijkstra in C++ with priority queue. You can view the code using the
             link below:
         </p>
-        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/dijkstra(with%20priority%20queue">Dijkstra'sCode(priority queue)</a>
+        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/codes/dijkstra(with%20priority%20queue)">Dijkstra'sCode(priority queue)</a>
          <h4>bellman ford algorithm Implementation in C++</h4>
  <p>Effeciency:0(|v||E|)</p>
         <p>
