--- a/chethan/route_businessm.html
+++ b/chethan/route_businessm.html
@@ -278,7 +278,7 @@
             Here is the implementation of bellman fordin C++. You can view the code using the
             link below:
         </p>
-        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/bellmanford">Bellmanford'sCode</a>
+        <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/chethan/bellmanford.cpp">Bellmanford'sCode</a>
  <h4> trie  Implementation in C++</h4>
  <p>Effeciency:insertion :O(L)</p>
 
