Update energy in service.html

--- a/nandeesh/energy in service.html
+++ b/nandeesh/energy in service.html
@@ -157,7 +157,7 @@
             <li><strong>Graph Representation:</strong> Representing air quality stations as nodes and the paths between them as edges.</li>
             <li><strong>Optimizing Data Collection:</strong> Identifying the most efficient routes for monitoring data collection.</li>
         </ul>
-        <p> Implementation code for this problem: <a href="https://github.com//Sudeepsanshi19/Hanoi-github.io/blob/main/nandeesh/codes/floyd warshall.cpp">Floyd-Warshall code</a></p>
+        <p> Implementation code for this problem: <a href="https://https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/nandeesh/codes/floyd%20warshall%20code.cpp">Floyd-Warshall code</a></p>
 
         <h2>Problem 2: Optimizing Waste Management Routes</h2>
         <p>
