Update energy in service.html

--- a/nandeesh/energy in service.html
+++ b/nandeesh/energy in service.html
@@ -177,7 +177,7 @@
             <li><strong>Pattern Detection:</strong> Identifying significant pollutant spikes in data streams.</li>
             <li><strong>Data Handling:</strong> Efficiently processing large datasets to detect anomalies.</li>
         </ul>
-        <p> Implementation code for this problem: <a href="https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/nandeesh/codes/rabin_karp.cpp">Rabin-Karp code</a></p>
+        <p> Implementation code for this problem: <a href="https://https://github.com/Sudeepsanshi19/Hanoi-github.io/blob/main/nandeesh/codes/rabin%20karp.cpp">Rabin-Karp code</a></p>
     </section>
 </body>
 
